<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <item android:id="@+id/linear_layout" android:title="@string/linear_layout"
      android:orderInCategory="1" android:showAsAction="never" />
  <item android:id="@+id/relative_layout" android:title="@string/relative_layout"
      android:orderInCategory="1" android:showAsAction="never" />
  <item android:id="@+id/grid_layout" android:title="@string/grid_layout"
      android:orderInCategory="1" android:showAsAction="never" />
  <item android:id="@+id/drawer_layout" android:title="@string/drawer_layout"
      android:orderInCategory="1" android:showAsAction="never" />
  <item android:id="@+id/sliding_layout" android:title="@string/sliding_layout"
      android:orderInCategory="1" android:showAsAction="never" />
  <item android:id="@+id/paging_layout" android:title="@string/paging_layout"
      android:orderInCategory="1" android:showAsAction="never" />
</menu>
