<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SlidingPaneLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/spl"
    android:layout_width="match_parent" android:layout_height="match_parent" >
    <LinearLayout android:orientation="vertical" android:paddingTop="12dip"
                  android:layout_width="85dip" android:layout_height="match_parent"
                  android:layout_weight="1" android:background="@drawable/starstrip" >
        <ImageButton android:src="@drawable/ib_states" android:background="#00000000"
            android:layout_width="wrap_content"  android:layout_height="wrap_content"
            android:id="@+id/ib_earth" android:contentDescription="@string/ib_earth" />
        <ImageButton android:src="@drawable/ib2_states" android:background="#00000000"
            android:layout_width="wrap_content"  android:layout_height="wrap_content"
            android:id="@+id/ib_venus" android:contentDescription="@string/ib_venus" />
        <ImageButton android:src="@drawable/ib3_states" android:background="#00000000"
            android:layout_width="wrap_content"  android:layout_height="wrap_content"
            android:id="@+id/ib_jupiter" android:contentDescription="@string/ib_jupiter" />
        <ImageButton android:src="@drawable/ib4_states" android:background="#00000000"
            android:layout_width="wrap_content"  android:layout_height="wrap_content"
            android:id="@+id/ib_neptune" android:contentDescription="@string/ib_neptune" />
        <ImageButton android:src="@drawable/ib5_states" android:background="#00000000"
            android:layout_width="wrap_content"  android:layout_height="wrap_content"
            android:id="@+id/ib_mars" android:contentDescription="@string/ib_mars" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:paddingTop="16dip" android:id="@+id/uiPane"
            android:paddingLeft="4dip" android:background="@drawable/plasma1080"
            android:layout_width="match_parent" android:layout_height="match_parent" >
            <ImageView android:id="@+id/iv1" android:background="@drawable/ib_earth_normal"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:contentDescription="@string/planet_name_earth" />
            <TextView android:text="@string/planet_name_earth" android:textColor="#FFFFFF"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="20sp" android:textStyle="bold" android:id="@+id/tv1" />
            <ImageView android:id="@+id/iv2" android:background="@drawable/listviewdiv"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:contentDescription="@string/drawer_layout" />
            <TextView android:text="@string/planet_mass_earth" android:textColor="#FFFFFF"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="16sp" android:id="@+id/tv2" android:paddingLeft="30dip"
                android:paddingTop="12dip" android:shadowColor="#77000000"
                android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="1.2" />
            <TextView android:text="@string/planet_grav_earth" android:textColor="#FFFFFF"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="16sp" android:id="@+id/tv3" android:paddingLeft="30dip"
                android:paddingTop="12dip" android:shadowColor="#77000000"
                android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="1.2" />
            <TextView android:text="@string/planet_size_earth" android:textColor="#FFFFFF"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="16sp" android:id="@+id/tv4" android:paddingLeft="30dip"
                android:paddingTop="12dip" android:shadowColor="#77000000"
                android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="1.2" />
        </LinearLayout>         
</android.support.v4.widget.SlidingPaneLayout>
