<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/drawerLayout" android:layout_width="match_parent"
  android:layout_height="match_parent" android:background="@drawable/plasma1080">
  <LinearLayout android:orientation="vertical" android:paddingTop="16dip"
    android:paddingLeft="30dip"
    android:layout_width="wrap_content" android:layout_height="wrap_content" >
    <ImageView android:id="@+id/iv1" android:background="@drawable/ib_earth_normal"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:contentDescription="@string/planet_name_earth" />
    <TextView android:text="@string/planet_name_earth" android:textColor="#FFFFFF"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textSize="20sp" android:textStyle="bold" android:id="@+id/tv1" />
    <ImageView android:id="@+id/iv2" android:background="@drawable/listviewdiv"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:contentDescription="@string/drawer_layout" />
    <TextView android:text="@string/planet_mass_earth" android:textColor="#FFFFFF"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textSize="16sp" android:id="@+id/tv2" android:paddingLeft="30dip"
              android:paddingTop="12dip" android:shadowColor="#77000000"
              android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="1.2" />
    <TextView android:text="@string/planet_grav_earth" android:textColor="#FFFFFF"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textSize="16sp" android:id="@+id/tv3" android:paddingLeft="30dip"
              android:paddingTop="12dip" android:shadowColor="#77000000"
              android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="1.2" />
    <TextView android:text="@string/planet_size_earth" android:textColor="#FFFFFF"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textSize="16sp" android:id="@+id/tv4" android:paddingLeft="30dip"
              android:paddingTop="12dip" android:shadowColor="#77000000"
              android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="1.2" />
    </LinearLayout>  
    <ListView
      android:id="@+id/listView" android:choiceMode="singleChoice"
      android:layout_height="match_parent" android:layout_width="120dip"
      android:divider="@drawable/listviewdiv" android:dividerHeight="6dip"
      android:background="#AAFFFFFF" android:layout_gravity="start"
      android:paddingLeft="1dip" android:paddingRight="1dip" >
    </ListView>
</android.support.v4.widget.DrawerLayout>
